apps/tpi-1/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: gw.${domain_wahoo_li:=wahoo.li}
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
  labels:
    velero.io/exclude-from-backup: "true"
  name: radarr
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.${domain_wahoo_li:=wahoo.li}
    http:
      paths:
      - backend:
          service:
            name: ak-outpost-proxy-default
            port:
              number: 9000
        path: /
        pathType: Prefix
